Move cron and lib scripts from /etc to /scripts in sources.
[kir@openvz.org: use build-in-automake install logic]

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@
 SUBDIRS = bin \
           etc \
           man \
+          scripts \
           src
 
 noinst_HEADERS = $(wildcard include/*.h) \
