Fixed /etc/vz/dists/scripts/* installation.
[kir@openvz.org: my fault, I have introduced both nobase_ and scripts subdir,
so it ended up in /etc/vz/dists/scripts/scripts/.]

--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -17,9 +17,8 @@
 
 pkgconfdir        = $(sysconfdir)/vz
 distconfdir       = $(pkgconfdir)/dists
-distconfscriptdir = $(distconfdir)/scripts
 
-nobase_distconfscript_SCRIPTS = \
+nobase_distconf_SCRIPTS = \
 	$(wildcard scripts/*.sh) \
 	scripts/functions
 
@@ -28,7 +27,7 @@ distconf_DATA = \
 	distribution.conf-template
 
 EXTRA_DIST = \
-	$(nobase_distconfscript_SCRIPTS) \
+	$(nobase_distconf_SCRIPTS) \
 	$(distconf_DATA) \
 	$(wildcard *.conf)
 
