Cleaned up etc/network-scripts installation logic.
Perfection is near:
 - removed useless ifcfg-venet0.in -> ifcfg-venet0 generation
 - added CLEANFILES for 'make clean' to work
 - added missing $(srcdir) in installation

--- a/etc/network-scripts/Makefile.am
+++ b/etc/network-scripts/Makefile.am
@@ -23,17 +23,20 @@ netsdir = $(sysconfdir)/sysconfig/network-scripts
 
 NETSSCRIPTS = ifdown-venet ifup-venet
 NETSDATA    = ifcfg-venet0
-NETSFILES   = $(NETSSCRIPTS) $(NETSDATA)
 
-EXTRA_DIST = $(NETSFILES:%=%.in)
+EXTRA_DIST = \
+	$(NETSSCRIPTS:%=%.in) \
+	$(NETSDATA)
+
+CLEANFILES = $(NETSSCRIPTS)
 
 include $(top_srcdir)/pathsubst.am
 
-install-redhat: $(NETSFILES)
+install-redhat: $(NETSSCRIPTS)
 	$(mkinstalldirs) $(DESTDIR)$(netsdir)
 	for file in $(NETSSCRIPTS); do \
 		$(INSTALL_SCRIPT) $$file $(DESTDIR)$(netsdir)/$$file; \
 	done
 	for file in $(NETSDATA); do \
-		$(INSTALL_DATA) $$file $(DESTDIR)$(netsdir)/$$file; \
+		$(INSTALL_DATA) $(srcdir)/$$file $(DESTDIR)$(netsdir)/$$file; \
 	done
