Made 'make clean' to remove files autogenerated with pathsubst.am
By adding CLEANFILES where appropriate.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -22,4 +22,6 @@ sbin_SCRIPTS = vzcpucheck \
 
 EXTRA_DIST=$(sbin_SCRIPTS:%=%.in)
 
+CLEANFILES = $(sbin_SCRIPTS)
+
 include $(top_srcdir)/pathsubst.am
