--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -15,10 +15,12 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+include $(top_srcdir)/paths.am
+
 INCLUDES = -I$(top_srcdir)/include
 
 AM_CFLAGS = -DSBINDIR=\"$(sbindir)\" \
-            -DPKGCONFDIR=\"$(sysconfdir)/vz\" \
+            -DPKGCONFDIR=\"$(pkgconfdir)\" \
             -DPKGLIBDIR=\"$(pkglibdir)\"
 
 LIB_VER = 0.0.2
