--- a/etc/logrotate.d/Makefile.am
+++ b/etc/logrotate.d/Makefile.am
@@ -15,7 +15,7 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-logrdir = $(sysconfdir)/logrotate.d
+include $(top_srcdir)/paths.am
 
 LOGRSCRIPTS = vzctl
 
