--- a/paths.am
+++ b/paths.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2000-2006 SWsoft. All rights reserved.
+#  Copyright (C) 2006 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -15,18 +15,17 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-INITSCRIPTS = vz vz-gentoo
+bashcdir    = $(sysconfdir)/bash_completion.d
+cronddir    = $(sysconfdir)/cron.d
+initddir    = $(sysconfdir)/init.d
+logrdir     = $(sysconfdir)/logrotate.d
+netsdir     = $(sysconfdir)/sysconfig/network-scripts
+udevdir     = $(sysconfdir)/udev/rules.d
 
-EXTRA_DIST = $(INITSCRIPTS:%=%.in)
+pkgconfdir  = $(sysconfdir)/vz
+vpsconfdir  = $(pkgconfdir)/conf
+distconfdir = $(pkgconfdir)/dists
+namesdir    = $(pkgconfdir)/names
 
-CLEANFILES = $(INITSCRIPTS)
-
-include $(top_srcdir)/pathsubst.am
-
-install-redhat: vz
-	$(mkinstalldirs) $(DESTDIR)$(initddir)
-	$(INSTALL_SCRIPT) vz $(DESTDIR)$(initddir)/vz
-
-install-gentoo: vz-gentoo
-	$(mkinstalldirs) $(DESTDIR)$(initddir)
-	$(INSTALL_SCRIPT) vz-gentoo $(DESTDIR)$(initddir)/vz
+vzlibdir    = $(pkglibdir)/scripts
+vzcrondir   = $(pkgdatadir)/scripts
