--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,12 +15,14 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+include $(top_srcdir)/paths.am
+
 SUBDIRS = lib
 
 INCLUDES = -I$(top_srcdir)/include
 
 AM_CFLAGS = -DSBINDIR=\"$(sbindir)\" \
-            -DPKGCONFDIR=\"$(sysconfdir)/vz\" \
+            -DPKGCONFDIR=\"$(pkgconfdir)\" \
             -DPKGLIBDIR=\"$(pkglibdir)\"
 
 sbin_PROGRAMS = arpsend \
