Fix VPSCONFDIR in etc/init.d/vz-gentoo script
It should fix application of 0.conf file during startup,
as well as start of VEs marked with "ONBOOT=yes".

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -16,7 +16,7 @@ check_config() {
 	: ${VZQUOTA:=@SBINDIR@/vzquota}
 	: ${VZVEINFO:=/proc/vz/veinfo}
 	: ${VESTAT:=/proc/vz/vestat}
-	: ${VPSCONFDIR:=@PKGCONFDIR@}
+	: ${VPSCONFDIR:=@VPSCONFDIR@}
 	: ${PRELOAD_MODULES:="af_packet"}
 	: ${MODULES:="vzmon vzdquota vzdev"}
 	: ${MIGRATE_MODULES:="vzcpt vzrst"}
