--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -413,7 +413,8 @@ if ! $SSH "root@$host" "vzctl quotaon $VEID"; then
 fi
 
 log 1 "Syncing private"
-if ! rsync -aH --progress "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}" | \
+if ! rsync -aH --delete --progress \
+		"$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}" | \
 		grep "% of" | awk -v ORS="\r" '{print $10}'; then
 	log 0 "Failed to sync VE private areas"
 	undo_quota_on
@@ -466,7 +467,8 @@ fi
 if [ "$state" = "running" ]; then
 	log 2 "Syncing private (2nd pass)"
 	time_rsync2=$(date +%s.%N)
-	if ! rsync -aH "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"; then
+	if ! rsync -aH --delete \
+			"$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"; then
 		log 0 "Failed to sync VE private areas"
 		undo_source_stage
 		exit $MIG_ERR_COPY
