Really fix installation of proper VE configs.
An addition to the previous commit 82968bc396108a54c22d2e32b3a69afb57498526.

The problem apparently is when variable assignment is performed in Makefile,
and the line (like A = b) is preceded with a TAB character, GNU make
just ignores this line. No error, no warning, just ignore...

--- a/etc/conf/Makefile.am
+++ b/etc/conf/Makefile.am
@@ -20,12 +20,13 @@ include $(top_srcdir)/paths.am
 VE0CONFIG = 0.conf
 VECONFIG  = ve-light.conf-sample ve-vps.basic.conf-sample
 
-VECONFIG_EXT = .x86
 if ARCH_IA64
-	VECONFIG_EXT = .ia64
+VECONFIG_EXT = .ia64
 else
 if ARCH_X86_64
-	VECONFIG_EXT = .x86_64
+VECONFIG_EXT = .x86_64
+else
+VECONFIG_EXT = .x86
 endif
 endif
 
