Implement MODULES_DISABLED in gentoo initscript; document it.
This is an addition to commit 37861579f02fee2f6a8aea48282586b0a45d94bc

In case MODULES_DISABLED is set to "yes" in global config,
no attempt is made to load/unload OpenVZ kernel modules
in vz initscripts.

http://bugzilla.openvz.org/132

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -17,14 +17,17 @@ check_config() {
 	: ${VZVEINFO:=/proc/vz/veinfo}
 	: ${VESTAT:=/proc/vz/vestat}
 	: ${VPSCONFDIR:=@VPSCONFDIR@}
-	: ${PRELOAD_MODULES:="af_packet"}
-	: ${MODULES:="vzmon vzdquota vzdev"}
-	: ${MIGRATE_MODULES:="vzcpt vzrst"}
-	: ${NET_MODULES="vznetdev vznet"}
 	: ${VZDEV:=venet0}
 
-	# check if you should load vzwdog module
-	[ "${VZWDOG}" = "yes" ] && MODULES="${MODULES} vzwdog"
+	if [ "${MODULES_DISABLED}" != "yes" ]; then
+		: ${PRELOAD_MODULES:="af_packet"}
+		: ${MODULES:="vzmon vzdquota vzdev"}
+		: ${MIGRATE_MODULES:="vzcpt vzrst"}
+		: ${NET_MODULES="vznetdev vznet"}
+
+		# check if you should load vzwdog module
+		[ "${VZWDOG}" = "yes" ] && MODULES="${MODULES} vzwdog"
+	fi
 
 	# we need a working vzctl
 	if [ ! -x "${VZCTL}" ]; then
