Simplified vzctl cron.d entries.
It makes little sense to have two separate files in /etc/cron.d/, so
merge both vpsnetclean and vpsreboot into a sinlge file with a simple name.
Also removed licensing blurb since it doesn't make much sense here.

--- a/etc/cron.d/Makefile.am
+++ b/etc/cron.d/Makefile.am
@@ -17,10 +17,7 @@
 
 include $(top_srcdir)/pathsubst.am
 
-CRONSCRIPTS = \
-	vpsreboot \
-	vpsnetclean
-
+CRONSCRIPTS = vz
 EXTRA_DIST = $(CRONSCRIPTS:%=%.in)
 
 if ENABLE_CRON
