Move cronjob installation/removal logic to initscript
If OpenVZ is not started, it doesn't make sense to execute its
cron jobs every five minutes. This fills up system logs, reduces
notebook battery life etc. Moving cronjobs management to initscript
fixes that.

Idea stolen from mailman initscript.

--- a/paths.am
+++ b/paths.am
@@ -20,7 +20,8 @@ bashcdir    = $(sysconfdir)/bash_completion.d
 endif
 
 if ENABLE_CRON
-cronddir    = $(sysconfdir)/cron.d
+cronddir    = $(pkgdatadir)/cron
+dst_cronddir= $(sysconfdir)/cron.d
 endif
 
 if ENABLE_LOGROTATE
