Change the default behaviour for AC_PROG_LIBTOOL to disable build of static libraries.  The user may still override this default by specifying --enable-static.
Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>
Acked-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,9 @@ AC_CANONICAL_TARGET
 # Automake
 AM_INIT_AUTOMAKE([1.9 foreign dist-bzip2])
 
+# Disable build of static libraries by default.
+AC_DISABLE_STATIC
+
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_LIBTOOL
