bash-completion: fixed support for VE names with dashes
Commit 7dd83295d36d5d83e98f5bc5bc0cfdbfa2c05141 introduced support
for VE names in bash_completion script. Unfortunately it stripped
all the dashes ("-") from VE names, so it was not possible to use
it with names such as deb-build-amd64.

This patch fixes it.

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -5,6 +5,7 @@
 _get_ves()
 {
 	local cmd=$1
+	local rm_empty='sed s/^-[[:space:]]*//'
 	case $cmd in
 		create)
 			# create a new VEID, by increasing the last one
@@ -15,17 +16,17 @@ _get_ves()
 		start|mount|umount|destroy)
 			# stopped VEs
 			@SBINDIR@/vzlist -H -S -oveid
-			@SBINDIR@/vzlist -H -S -oname | sed s/-//g
+			@SBINDIR@/vzlist -H -S -oname | $rm_empty
 			;;
 		stop|enter|exec*)
 			# running VEs
 			@SBINDIR@/vzlist -H -oveid
-			@SBINDIR@/vzlist -H -oname | sed s/-//g
+			@SBINDIR@/vzlist -H -oname | $rm_emtpy
 			;;
 		*)
 			# All VEs
 			@SBINDIR@/vzlist -H -a -oveid
-			@SBINDIR@/vzlist -H -a -oname | sed s/-//g
+			@SBINDIR@/vzlist -H -a -oname | $rm_empty
 			;;
 	esac
 }
