Relocate cron master file from pkgdatadir to pkgconfdir.
Configuration files should not be placed in datadir.
[kir@openvz.org: fixed commit message]

Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>
Acked-by: Kir Kolyshkin <kir@openvz.org>

--- a/paths.am
+++ b/paths.am
@@ -20,7 +20,7 @@ bashcdir    = $(sysconfdir)/bash_completion.d
 endif
 
 if ENABLE_CRON
-cronddir    = $(pkgdatadir)/cron
+cronddir    = $(pkgconfdir)/cron
 dst_cronddir= $(sysconfdir)/cron.d
 endif
 
